part-3a/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment-<username>
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        resources:
          requests:
            memory: "512M"
            cpu: "500m"
          limits:
            memory: "512M"
            cpu: "500m"
        ports:
        - containerPort: 1433
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data-<username>
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment-<username>
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
