part-3a/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment-<username>
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: NodePort
