part-3a/mssql-route-sol.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mssql-route-steve
  namespace: trainingdev
spec:
  host: mssql-deployment-steve-trainingdev.apps.ocp.sudatel.net
  to:
    kind: Service
    name: mssql-deployment-steve
    weight: 100
  port:
    targetPort: 1433
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
