part-3a/mssql-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mssql-route-<username>
  namespace: trainingdev
spec:
  host: mssql-deployment-<username>-trainingdev.apps.ocp.sudatel.net
  to:
    kind: Service
    name: mssql-deployment-<username>
    weight: 100
  port:
    targetPort: 1433
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
